[package]
name = "spin-hello-rs"
authors = ["Dimitri <5898931+dimitrilw@users.noreply.github.com>"]
description = "quick test of Spin & Rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }

[workspace]
